// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Title > should display component 1`] = `
<body>
  <div>
    <div
      class="flex items-center gap-4"
    >
      <h1
        class="text-wrap text-2xl font-bold uppercase"
      >
        Test
      </h1>
    </div>
  </div>
</body>
`;

exports[`Title > should display component with back header 1`] = `
<body>
  <div>
    <div
      class="flex items-center gap-4"
    >
      <a
        class="btn btn-square w-14"
        data-discover="true"
        href="/"
      >
        <svg
          class="h-8 w-8"
          color="currentColor"
          fill="none"
          height="1.5em"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="1.5em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 6L9 12L15 18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </a>
      <h1
        class="text-wrap text-2xl font-bold uppercase"
      >
        Test
      </h1>
    </div>
  </div>
</body>
`;

exports[`Title > should display component with class names 1`] = `
<body>
  <div>
    <div
      class="flex items-center gap-4 mb-4"
    >
      <a
        class="btn btn-square w-14"
        data-discover="true"
        href="/"
      >
        <svg
          class="h-8 w-8"
          color="currentColor"
          fill="none"
          height="1.5em"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="1.5em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 6L9 12L15 18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </a>
      <h1
        class="text-wrap text-2xl font-bold uppercase"
      >
        Test
      </h1>
    </div>
  </div>
</body>
`;
